Base all Dockerfiles on Ubuntu 20.04
This commit also makes the following changes:

1. Replaces all calls to `apt` with `apt-get` - this change is being made
as `apt` does not have a stable CLI interface, so its use within scripts
is discouraged.

2. Updates syntax to remove the deprecated "MAINTAINER". Further
information from the Docker documentation below:

> MAINTAINER (deprecated)
>
> MAINTAINER <name>
>
> The MAINTAINER instruction sets the Author field of the generated
> images. The LABEL instruction is a much more flexible version of this
> and you should use it instead, as it enables setting any metadata you
> require, and can be viewed easily, for example with docker inspect. To
> set a label corresponding to the MAINTAINER field you could use:
>
> LABEL maintainer="SvenDowideit@home.org.au"
>
> This will then be visible from docker inspect with the other labels.

3. Sets the maintainer LABEL to myself.

--- a/gsad/Dockerfile
+++ b/gsad/Dockerfile
@@ -1,13 +1,15 @@
-FROM ubuntu:bionic
-MAINTAINER Mohammad Razavi <mrazavi64@gmail.com>
+FROM ubuntu:focal
+LABEL maintainer="Richard Phillis <rphillis@studiosity.com>"
+# LABEL maintainer="Mohammad Razavi <mrazavi64@gmail.com>"
 
 RUN set -ex; \
-    apt update; \
-    DEBIAN_FRONTEND=noninteractive apt install -y --no-install-recommends gnupg; \
+    apt-get update; \
+    DEBIAN_FRONTEND=noninteractive apt-get install -y --no-install-recommends gnupg; \
+    # 3C453D244AA450E0: "Launchpad PPA for Mohammad Razavi"
     apt-key adv --keyserver hkp://keyserver.ubuntu.com:80 --recv-keys 3C453D244AA450E0; \
-    echo "deb http://ppa.launchpad.net/mrazavi/gvm/ubuntu bionic main" > /etc/apt/sources.list.d/mrazavi-ubuntu-gvm-bionic.list; \
-    apt update; \
-    DEBIAN_FRONTEND=noninteractive apt install -y gsad ; \
+    echo "deb http://ppa.launchpad.net/mrazavi/gvm/ubuntu focal main" > /etc/apt/sources.list.d/mrazavi-ubuntu-gvm-focal.list; \
+    apt-get update; \
+    DEBIAN_FRONTEND=noninteractive apt-get install -y gsad ; \
     sed -i 's|/var/log/gvm/gsad.log|/dev/stdout|g' /etc/gvm/gsad_log.conf; \
     rm -rf /var/lib/apt/lists/*
 
