--- a/gvm-postgres/Dockerfile
+++ b/gvm-postgres/Dockerfile
@@ -3,6 +3,7 @@ LABEL maintainer="Richard Phillis <rphillis@studiosity.com>"
 # LABEL maintainer="Mohammad Razavi <mrazavi64@gmail.com>"
 
 RUN set -ex; \
+    localedef -i en_US -f UTF-8 en_US.UTF-8; \
     apt-key adv --keyserver hkp://keyserver.ubuntu.com:80 --recv-keys 3B4FE6ACC0B21F32; \
     echo "deb http://archive.ubuntu.com/ubuntu focal main" > /etc/apt/sources.list.d/focal.list; \
     echo "deb http://archive.ubuntu.com/ubuntu focal-updates main" > /etc/apt/sources.list.d/focal-updates.list; \
